front-react/src/App.css
:root {
  --main-bg-color: #EBEBF4;
  --main-button-bg-positive: #bdcc72;
  --main-button-bg-negative: #f68fa0;
  --main-button-bg-neutral: #93b9dc;
}


body{
  background-color: var(--main-bg-color);  
  font-family: "bahnschrift", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 32pt;

  width: 99vw;
  height: 98vh;

  overflow-x: hidden;
  overflow-y: hidden;
}

#root {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
}

.container{
  min-width: 50vw;
  min-height: 50vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 10px; 
  padding: 10px;
}


.w70{
  width: 70%;
}
.button{
  width : 100%;
  height : 50px;
  margin : 15px;
  border : none;
  border-radius : 5px;
  color: #ededed;
  transition : background-color ease-in-out 0.5s; 
  font-size: 25px;
  box-shadow: 7px 6px 6px 1px rgb(50 50 93 / 11%);
  max-width: 300px;
}
.btn-positive{
  background-color : var(--main-button-bg-positive) ;
}
.btn-negative{
  background-color :  var(--main-button-bg-negative) ;
}
.btn-neutral{
  background-color :  var(--main-button-bg-neutral) ;
}
button:hover{
  background-color : transparent ;
}
.btn-positive:hover {
  border : 1px solid   var(--main-button-bg-positive) ;
  color :  var(--main-button-bg-positive) ;
}
.btn-negative:hover{
  border : 1px solid   var(--main-button-bg-negative) ;
  color :  var(--main-button-bg-negative) ;
}
.btn-neutral:hover{
  border : 1px solid   var(--main-button-bg-neutral) ;
  color :  var(--main-button-bg-neutral) ;
}




h1, h2 {
  font-family: "intro", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 48pt;
  margin-bottom: 20px;
}


.video-presentation {
  height: 65vh;
}


.controls {
  display: flex;
  margin: 30px;
  width: 70%;
  flex-direction: row;
  align-items: center;
  justify-content: center;

}

.question{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;

}

.question-label{

  width: 60%;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  align-items: center;
}
  
.question-text {
  margin: 40px;
}
.enregistrement{
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 40px;
}

.timer-wrapper{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.indicator {
  position: relative; 
  top: -150px;
}

.indicateur {
  text-align: center;
  position: absolute;
  width: 100%;
}

.video {
  height: 50vh;
}

.video-canvas {
  height: 90%;
}

.react-simple-keyboard {
  font-size: 18pt;
  position: absolute;
  bottom: 30px;
  left: 1vw;
  width: 98vw!important;
}

.fake-keyboard {
  /* for layout purpose */
  visibility: hidden;
  height: 400px;
}

.hg-button {
  height: 60px !important;
}

.hg-standardBtn {
  width: 60px !important;
}

.hg-functionBtn {
  width: 180px !important;
}

.side-by-side-centered {
  display: flex; 
  align-items: center;
  justify-content: center;
}

.formulaire-consentement {
  height: 350px;
  width: 80%;
  overflow-y: auto;
  margin: auto;
  font-size: 20px;
  margin-top: 30px;
  margin-bottom: 30px;
  border: solid rgb(201, 201, 201) 2px
}

.consentement-disclaimer{
  width: 100% ;
  font-size: 25px;
  text-align: center;
}

.formulaire-consentement > h2 {
  font-size: 25px;
}

.signature-container {
  display: flex;
  justify-content: center;
  margin: 20px; 
}

.sigCanvas {
  background-color: white;
}

.absolute{
  position: absolute
}

.invisible {
  visibility: hidden;
}

.visible {
  visibility: visible;
  left: 1em;
}

.text-center{
  text-align: center;
}

.text-left{
  text-align: left;
}

.full-width {
  width: 100%;
}

/* ligne graphique */
/* bleu1 #282d66
bleu2: #383b90
bleu3: #7da4b5
vert1: #80b1a3
vert2: #c6e0bc
or: #dec470
saumon: #ead8c0 */


.userForm-infos{
	width: 90%;
  font-size: 30px;
	padding: 30px 30px 15px 30px;
	margin: 30px 30px 15px 30px;
}

.userForm-infos label {
	display:block;
	margin-bottom: 10px;
}
.userForm-infos label > span{
	display: inline-block;
	float: left;
	width: 250px;
}
.userForm-infos input[type=text],
.userForm-infos input[type=email] 
{
	background: transparent;
	border: none;
	border-bottom: 1px dashed #83A4C5;
	width: 275px;
	outline: none;
	padding: 0px 0px 0px 2px;
  font-size: 25px;
  margin-left: 5px;
  margin-bottom: 10px;
	font-style: italic;
}
.userForm-infos textarea{
	font-style: italic;
	padding: 0px 0px 0px 0px;
	background: transparent;
	outline: none;
	border: none;
	border-bottom: 1px dashed #83A4C5;
	width: 275px;
	overflow: hidden;
	resize:none;
	height:80px;
  font-size: 25px;
}

.userForm-infos textarea:focus, 
.userForm-infos input[type=text]:focus,
.userForm-infos input[type=email]:focus,
.userForm-infos input[type=email] :focus
{
	border-bottom: 1px dashed #2d3844;
}

.userForm-infos input[type=submit],
.userForm-infos input[type=button]{
	background: #576E86;
	border: none;
	padding: 8px 10px 8px 10px;
	border-radius: 5px;
	color: #A8BACE;
}
.userForm-infos input[type=submit]:hover,
.userForm-infos input[type=button]:hover{
background: #394D61;
}


.Toastify__toast-body{
  font-size: 16pt
}

.sound-wave {
  height: 250px;
  width: 640px;
}

